# cdr-pipeline

./: .env.local.sample  README.md  pyproject.toml  requirements.txt
apps/cdr/: admin.py  apps.py  models.py
apps/cdr/serializers/: cdr_serializer.py
apps/cdr/tasks/: tasks_consumer.py  tasks_main.py  tasks_producer.py
apps/cdr/tests/: test_consumer.py  test_main.py  test_model.py  test_producer.py  test_search_view.py  test_stats_view.py  test_sync_status_view.py
apps/cdr/urls/: __init__.py
apps/cdr/urls/cdr/: __init__.py  urls_cdr.py
apps/cdr/views/: cdr_search.py  cdr_stats.py  cdr_sync_tatus.py
apps/core/: documents.py  middlewares.py  os_setting_elastic.py  validators.py
apps/core/management/commands/: create_consumer.py  create_producer.py  create_producer_consumer.py  wait_for_rabbitmq.py
config/: settings.py  urls.py
