[tool.poetry]
name = "cdr-pipeline"
version = "0.1.0"
description = "CDR Pipeline is a scalable and reliable system for ingesting, processing, and searching Call Detail Records (CDRs)."
authors = ["pedramkarimii <pedram@9060.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
pika = "^1.3.2"
psycopg2-binary = "^2.9.10"
python-decouple = "^3.8"
djangorestframework = "^3.15.2"
celery = "^5.4.0"
djangorestframework-simplejwt = "^5.3.1"
elasticsearch = "^8.17.0"
drf-spectacular = "^0.28.0"
django-celery-results = "^2.5.1"
django-elasticsearch-dsl = "^8.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.4"
pre-commit = "^4.0.1"
drf-yasg = "^1.21.8"
gunicorn = "^23.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
